# trino-dbt-integration

./: .gitignore  README.md  all_the_apps.sh  docker-compose-ci.yaml  docker-compose.yaml  index.html  pyproject.toml
.github/workflows/: build_changed_models.yml  tests.yml
dbeaver_conf/: initial-data-sources.conf
dbeaver_conf/queries/Trino-Ingestion-Tutorial/: mariadb_ingestion.sql  postgres.sql  trino_dql.sql
dbt/PostgresDbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/PostgresDbt/models/: maria_db_ingestion_customers.sql  overview.md  test.sql
dbt/TrinoIngestionDbt/: dbt_project.yml  profiles.yml
dbt/TrinoIngestionDbt/models/: sources.yml
dbt/TrinoIngestionDbt/models/data_ingestion/: ingestion_customers.sql
jupyter/notebooks/: edw_dbt.ipynb  run_modified.ipynb  trino_ingestion_dbt.ipynb
trino/trino_connections/: mariadb.properties
