[tool.poetry]
name = "trino_dbt_ingestion"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "1.8.2"
dbt-trino = "1.8.3"
dbt-postgres = "1.8.2"
Flask = "3.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
